k8s/file-processor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-processor
  template:
    metadata:
      labels:
        app: file-processor
    spec:
      containers:
      - name: file-processor
        image: your-repo/file-processor:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: file-processor
spec:
  selector:
    app: file-processor
  ports:
  - port: 8081
    targetPort: 8081
