k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-ingress
spec:
  rules:
    - http:
        paths:
          - path: /provider1
            pathType: Prefix
            backend:
              service:
                name: provider-provider1
                port:
                  number: 8080
          - path: /file
            pathType: Prefix
            backend:
              service:
                name: file-processor
                port:
                  number: 8081
